# verilog-preprocessor

./: .gitmodules  README.md
src/: CMakeLists.txt  VerilogPreProcessor.cpp  VerilogPreProcessor.h  main.cpp
src/utils/: CMakeLists.txt  utils_debug.cpp  utils_debug.h  utils_io.cpp  utils_io.h  utils_string.cpp  utils_string.h
test/: CMakeLists.txt  TestUtils.cpp
test/testing_utils/: CMakeLists.txt  testing_utils.cpp  testing_utils.h
